Improve and reformat