@@ -6,10 +6,11 @@ import picocli.CommandLine;
 
 /**
  * Creates a DuckDB database from a JFR recording file.
- * <p>
- * java -jar jfr-query-tool.jar import recording.jfr recording.duckdb
- * <p>
- * ignores stack traces for now and makes classes, methods, threads and everything else to strings
+ *
+ * <p>java -jar jfr-query-tool.jar import recording.jfr recording.duckdb
+ *
+ * <p>ignores stack traces for now and makes classes, methods, threads and everything else to
+ * strings
  */
 @CommandLine.Command(
         name = "duckdb",
@@ -17,41 +18,40 @@ import picocli.CommandLine;
         version = "0.1",
         description = "DuckDB tools for JFR recordings",
         subcommands = {
-                ImportCommand.class,
-                QueryCommand.class,
-                MacrosCommand.class,
-                ViewsCommand.class,
-                CommandLine.HelpCommand.class
-        }
-)
-public class Main implements Runnable{
+            ImportCommand.class,
+            QueryCommand.class,
+            MacrosCommand.class,
+            ViewsCommand.class,
+            CommandLine.HelpCommand.class
+        })
+public class Main implements Runnable {
 
+    @CommandLine.Spec CommandLine.Model.CommandSpec spec;
 
-    @CommandLine.Spec
-    CommandLine.Model.CommandSpec spec;
-
-    private static String INFO = """
+    @SuppressWarnings("FieldCanBeLocal")
+    private static final String INFO =
+            """
             Before using this tool, you must have a recording file.
             A file can be created by starting a recording from command line:
-            
+
              java -XX:StartFlightRecording:filename=recording.jfr,duration=30s ...
-            
+
             A recording can also be started on an already running Java Virtual Machine:
-            
+
              jcmd (to list available pids)
              jcmd <pid> JFR.start
-            
+
             Recording data can be dumped to file using the JFR.dump command:
-            
+
              jcmd <pid> JFR.dump filename=recording.jfr
-            
+
             The contents of the recording can then be printed, for example:
-            
+
                 view gc recording.jfr
                 view allocation-by-site recording.jfr
-            
+
             For more information about available commands, use 'help'
-            
+
             """;
 
     @Override
@@ -61,6 +61,7 @@ public class Main implements Runnable{
         // print usage with picocli
         spec.commandLine().usage(System.out);
     }
+
     public static void main(String[] args) {
         if (!new Main().checkIfReflectiveAccessOnRecordedObjectIsAvailable()) {
             restartWithAddOpenModules(args);
@@ -77,13 +78,15 @@ public class Main implements Runnable{
             String classPath = System.getProperty("java.class.path");
             String className = Main.class.getCanonicalName();
 
-            ProcessBuilder builder = new ProcessBuilder(
-                    javaBin,
-                    "--add-opens", "jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED",
-                    "-cp", classPath,
-                    className
-            );
-            System.out.println("Restarting with --add-opens jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED ");
+            ProcessBuilder builder =
+                    new ProcessBuilder(
+                            javaBin,
+                            "--add-opens",
+                            "jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED",
+                            "--enable-native-access=ALL-UNNAMED", // for good measure
+                            "-cp",
+                            classPath,
+                            className);
             for (String arg : args) {
                 builder.command().add(arg);
             }
